--- a/examples/index.html
+++ b/examples/index.html
@@ -7,12 +7,12 @@
 </head>
 <body>
     
-    <div class="console">
+    <!-- <div class="console">
         <div class="row">
             <h2>Hello, World</h2>
             <button data-submit="submit" id="btnClick">Submit</button>
         </div>
-    </div>
+    </div> -->
     
     <script src="./script/code.js"></script>
 </body>
